fix z-index

--- a/src/styles/module/_content.scss
+++ b/src/styles/module/_content.scss
@@ -6,12 +6,6 @@
 body{
   background-color: black;
 
-  .skip-link {
-    color: white;
-    text-decoration: none;
-    font-size: 1rem;
-    font-family: 'Open Sans', sans-serif;
-  }
   .content {
     font-family: 'Open Sans', sans-serif;
 
