--- a/src/styles/module/_header.scss
+++ b/src/styles/module/_header.scss
@@ -4,8 +4,8 @@
 .skip-link {
   position: absolute;
   color: white;
-  z-index: 1;
-  top: -40px;
+  z-index: 3;
+  top: -44px;
   left: 0;
   text-decoration: none;
   font-size: 1rem;
@@ -18,7 +18,7 @@
 
 .header {
   position: sticky;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
